--- a/appveyor.yml
+++ b/appveyor.yml
@@ -60,7 +60,7 @@ before_build:
       Write-Host "Generated files for: " $g $a
 
       # Download default NNUE net from fishtest
-      $nnuenet = Get-Content -Path ucioption.cpp | Select-String -CaseSensitive -Pattern "Option" | Select-String -CaseSensitive -Pattern "nn-[a-z0-9]{12}.nnue"
+      $nnuenet = Get-Content -Path src\ucioption.cpp | Select-String -CaseSensitive -Pattern "Option" | Select-String -CaseSensitive -Pattern "nn-[a-z0-9]{12}.nnue"
       $nnuenet -match "(?<nnuenet>nn-[a-z0-9]{12}.nnue)"
       $nnuenet = $Matches.nnuenet
       Write-Host "Default net: " $nnuenet
