--- a/appveyor.yml
+++ b/appveyor.yml
@@ -61,15 +61,15 @@ before_build:
 
       # Download default NNUE net from fishtest
       $nnuenet = Get-Content -Path src\ucioption.cpp | Select-String -CaseSensitive -Pattern "Option" | Select-String -CaseSensitive -Pattern "nn-[a-z0-9]{12}.nnue"
-      $nnuenet -match "(?<nnuenet>nn-[a-z0-9]{12}.nnue)"
+      $dummy = $nnuenet -match "(?<nnuenet>nn-[a-z0-9]{12}.nnue)"
       $nnuenet = $Matches.nnuenet
-      Write-Host "Default net: " $nnuenet
+      Write-Host "Default net:" $nnuenet
       $nnuedownloadurl = "https://tests.stockfishchess.org/api/nn/$nnuenet"
-      $nnuefilepath = "src\$nnuenet"
+      $nnuefilepath = "src\%CONFIGURATION%\$nnuenet"
       if (Test-Path -Path $nnuefilepath) {
             Write-Host "Already available."
       } else {
-            Write-Host "Downloading " $nnuedownloadurl
+            Write-Host "Downloading" $nnuedownloadurl
             Invoke-WebRequest -Uri $nnuedownloadurl -OutFile $nnuefilepath
       }
 
