--- a/appveyor.yml
+++ b/appveyor.yml
@@ -65,7 +65,7 @@ before_build:
       $nnuenet = $Matches.nnuenet
       Write-Host "Default net:" $nnuenet
       $nnuedownloadurl = "https://tests.stockfishchess.org/api/nn/$nnuenet"
-      $nnuefilepath = "src\" + %CONFIGURATION% + "\$nnuenet"
+      $nnuefilepath = "$CMAKE_RUNTIME_OUTPUT_DIRECTORY\$nnuenet"
       if (Test-Path -Path $nnuefilepath) {
             Write-Host "Already available."
       } else {
