Last %CONFIGURATION% try

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -68,7 +68,7 @@ build_script:
       $nnuenet = $Matches.nnuenet
       Write-Host "Default net:" $nnuenet
       $nnuedownloadurl = "https://tests.stockfishchess.org/api/nn/$nnuenet"
-      $nnuefilepath = "src\" %CONFIGURATION% "\$nnuenet"
+      $nnuefilepath = "src\" + %CONFIGURATION% + "\$nnuenet"
       if (Test-Path -Path $nnuefilepath) {
             Write-Host "Already available."
       } else {
