--- a/src/Makefile
+++ b/src/Makefile
@@ -109,6 +109,7 @@ STRIP = strip
 
 ### 2.2 Architecture specific
 
+
 ifeq ($(findstring x86,$(ARCH)),x86)
 
 # x86-32/64
@@ -200,7 +201,6 @@ ifeq ($(findstring -vnni,$(ARCH)),-vnni)
 	sse41 = yes
 	avx2 = yes
 	pext = yes
-	avx512 = yes
 	vnni = yes
 endif
 
@@ -211,6 +211,10 @@ endif
 # 64-bit pext is not available on x86-32
 ifeq ($(bits),32)
 	pext = no
+endif
+
+ifneq ($(shell echo $(ARCH) | sed 's/x86-\(32\|64\)\(-sse\|-popcnt\|-mmx\|-sse2\|-ssse3\|-sse41\|-modern\|-avx2\|-bmi2\|-avx512\|-vnni\)*/OK/'),OK)
+	arch =
 endif
 
 else
@@ -612,8 +616,9 @@ help:
 	@echo ""
 	@echo "Supported archs:"
 	@echo ""
-	@echo "x86-64-vnni             > x86 64-bit with vnni support"
+	@echo "x86-64-avx512-vnni      > x86 64-bit with 512-bit vnni support"
 	@echo "x86-64-avx512           > x86 64-bit with avx512 support"
+	@echo "x86-64-avx2-vnni        > x86 64-bit with 256-bit vnni support"
 	@echo "x86-64-bmi2             > x86 64-bit with bmi2 support"
 	@echo "x86-64-avx2             > x86 64-bit with avx2 support"
 	@echo "x86-64-sse41-popcnt     > x86 64-bit with sse41 and popcnt support"
