Accept -sse3 in ARCH.

--- a/src/Makefile
+++ b/src/Makefile
@@ -213,7 +213,7 @@ ifeq ($(bits),32)
 	pext = no
 endif
 
-ifneq ($(shell echo $(ARCH) | sed -E 's/x86-(32|64)(-sse|-popcnt|-mmx|-sse2|-ssse3|-sse41|-modern|-avx2|-bmi2|-avx512|-vnni)*/OK/'),OK)
+ifneq ($(shell echo $(ARCH) | sed -E 's/x86-(32|64)(-sse|-popcnt|-mmx|-sse2|-sse3|-ssse3|-sse41|-modern|-avx2|-bmi2|-avx512|-vnni)*/OK/'),OK)
 	arch =
 endif
 
