Embed default net in the executable
This is a preliminary work to study the embedding of the nnue default file
in the engine executable, using Dale Weiler's INCBIN macro
(https://github.com/graphitemaster/incbin)

TODO:
- build error if the default net is not in the src directory
- warning for casting const unsigned char* to char*
- doesn't build in Visual Studio C++
- this version will break fishtest, because the name of the default net
  is now inside a macro called "EvalFileDefaultName" in evaluate.h

--- a/src/Makefile
+++ b/src/Makefile
@@ -736,7 +736,7 @@ clean: objclean profileclean
 	@rm -f .depend *~ core
 
 net:
-	$(eval nnuenet := $(shell grep EvalFile ucioption.cpp | grep Option | sed 's/.*\(nn-[a-z0-9]\{12\}.nnue\).*/\1/'))
+	$(eval nnuenet := $(shell grep EvalFileDefaultName evaluate.h | sed 's/.*\(nn-[a-z0-9]\{12\}.nnue\).*/\1/'))
 	@echo "Default net: $(nnuenet)"
 	$(eval nnuedownloadurl := https://tests.stockfishchess.org/api/nn/$(nnuenet))
 	$(eval curl_or_wget := $(shell if hash curl 2>/dev/null; then echo "curl -skL"; elif hash wget 2>/dev/null; then echo "wget -qO-"; fi))
