Add extension to the PGO_TRAINING_DATA_FILE so that the generated file name matches the one we try to delete.

--- a/src/Makefile
+++ b/src/Makefile
@@ -39,7 +39,7 @@ PREFIX = /usr/local
 BINDIR = $(PREFIX)/bin
 
 ### Built-in benchmark for pgo-builds
-PGO_TRAINING_DATA_FILE = pgo_training_data
+PGO_TRAINING_DATA_FILE = pgo_training_data.bin
 PGOBENCH = ./$(EXE) bench
 PGOGENSFEN = ./$(EXE) gensfen depth 3 loop 1000 output_file_name $(PGO_TRAINING_DATA_FILE)
 
